Fix: Prevent overlap of navigation logo, and hamburger on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -499,6 +499,9 @@ input[type=search]:not(.browser-default) {
     main.container{
         margin: 0;
     }
+    .navmargin{
+        width: 100vw;
+    }
 }
 
 @media (max-width: 450px){
